# ChangeLog for net-dialup/gnokii
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/gnokii/ChangeLog,v 1.14 2004/07/09 22:04:13 lv Exp $

  09 Jul 2004; Travis Tilley <lv@gentoo.org> gnokii-0.5.10.ebuild,
  gnokii-0.6.0.ebuild:
  switch linux-headers dependency to virtual/os-headers

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> gnokii-0.5.10.ebuild,
  gnokii-0.6.0.ebuild:
  Add inherit eutils

  24 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> gnokii-0.6.0.ebuild:
  marked ~amd64.

*gnokii-0.6.0 (22 Mar 2004)

  22 Mar 2004; Heinrich Wendel <lanius@gentoo.org> gnokii-0.5.5.ebuild,
  gnokii-0.6.0.ebuild:
  version bump, bug #45365

  06 Mar 2004; Heinrich Wendel <lanius@gentoo.org> gnokii-0.5.10.ebuild:
  mark gnokii-0.5.10 stable because of a serious bug in the previous version (bug
  #42909)

*gnokii-0.5.10 (22 Feb 2004)

  22 Feb 2004; Heinrich Wendel <lanius@gentoo.org> gnokii-0.5.10.ebuild,
  gnokii-0.5.4.ebuild, gnokii-0.5.5.ebuild:
  mark 0.5.5 stable; remove 0.5.4; add 0.5.10

*gnokii-0.5.5 (25 Nov 2003)

  25 Nov 2003; Heinrich Wendel <lanius@gentoo.org> gnokii-0.5.5.ebuild:
  version bump

  19 Nov 2003; Heinrich Wendel <lanius@gentoo.org> metadata.xml:
  metadata

*gnokii-0.5.4 (01 Oct 2003)

  01 Oct 2003; Alastair Tse <liquidx@gentoo.org> gnokii-0.5.2-r1.ebuild,
  gnokii-0.5.4.ebuild, files/gnokii-0.5.2-nounix98pty.patch,
  files/gnokii-0.5.4-nounix98pty.patch:
  version bump. revised ebuild to not disable sandbox and remove gnokii group
  for the moment while we figure out whether it is actually needed. installs the
  right docs and other general cleanup.

*gnokii-0.5.2 (08 Aug 2003)

  08 Aug 2003; Hanno Boeck <hanno@gentoo.org> gnokii-0.5.2.ebuild:
  Version bump. Changed some dodoc-commands (ebuild submitted by roger@eskimo.com
  in bug 22270.

*gnokii-0.4.3 (22 May 2003)

  22 May 2003; Chuck Brewer <killian@gentoo.org>:
  Added maifest.

*gnokii-0.4.3 (10 Dec 2002)
