@@ -1,9 +1,7 @@
 MD5 283a09ec47584421cc124bbf3efb8e63 gnokii-0.6.0.ebuild 1770
-MD5 7e93cd0b5114159f05edb3ee46c7bb52 gnokii-0.4.3.ebuild 2327
 MD5 659f413872f296b259acd0d3a83edc3d gnokii-0.5.10.ebuild 1763
-MD5 3eef9a4504fb05599aa2fe55b75b42f5 ChangeLog 2076
+MD5 3fae9083385b907ad21ece4be151cd88 ChangeLog 2179
 MD5 ec2f84816306825d125d0c01bd86758d metadata.xml 163
 MD5 c090b40eb79ae5472e82a22256d7c396 files/gnokii-0.5.4-nounix98pty.patch 2279
-MD5 0513ee1bbaef4507f8dd27f9b40d1fa2 files/digest-gnokii-0.4.3 65
 MD5 18ace349b5a90256f80dfbcafb097441 files/digest-gnokii-0.6.0 66
 MD5 0bbebda960877f78a4e41b6799c0b653 files/digest-gnokii-0.5.10 67
