@@ -1,10 +1,8 @@
-MD5 2654738d41440590496c3317f07565bc mgetty-1.1.30-r1.ebuild 3408
-MD5 e2cb1946e296bdf2a38012170e4c121a mgetty-1.1.30.ebuild 3350
-MD5 07b663d5d4cc465a0832c9c8222ce0ac mgetty-1.1.28.ebuild 2594
-MD5 eed403d6ff763943f1ad59c4f88040ed ChangeLog 4387
+MD5 b1a86bb00a4173f7df12c188993c3239 mgetty-1.1.30-r1.ebuild 3408
+MD5 527ac0e55d3ecd1344f95522ab7a4448 mgetty-1.1.30.ebuild 3350
+MD5 98434c07d60f5dbb74b0341ab9eb01ad ChangeLog 4549
 MD5 ec2f84816306825d125d0c01bd86758d metadata.xml 163
 MD5 bc47f96a12b21b779d57c0c2ad4b6837 files/mgetty-1.1.30-gentoo.diff 2771
 MD5 c9b070dfabf7bd139d53d263f869b4f0 files/digest-mgetty-1.1.30-r1 70
 MD5 a1e05459ce2d5ff673bad552f355be4f files/mgetty-1.1.28-gentoo.diff 2308
-MD5 504eadb9fddc097570882ddc40a66997 files/digest-mgetty-1.1.28 283
 MD5 c9b070dfabf7bd139d53d263f869b4f0 files/digest-mgetty-1.1.30 70
