@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/gnokii
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/gnokii/ChangeLog,v 1.14 2004/07/09 22:04:13 lv Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/gnokii/ChangeLog,v 1.15 2004/08/03 07:36:14 lanius Exp $
+
+  03 Aug 2004; Heinrich Wendel <lanius@gentoo.org> gnokii-0.4.3.ebuild:
+  remove old buggy ebuild
 
   09 Jul 2004; Travis Tilley <lv@gentoo.org> gnokii-0.5.10.ebuild,
   gnokii-0.6.0.ebuild:
